# UAS-BT

./: .gitignore  How To Call All Components Robot.txt  README.md  click_map_goal.py  frames_2026-01-13_14.39.08.gv  frames_2026-01-13_18.51.55.gv  frames_2026-01-13_18.53.36.gv  my_map.pgm  my_map.yaml  my_map_serial.data  ym_map.pgm  ym_map.yaml  ym_map_serial.data
src/firmware/lib/encoder/: encoder.cpp  encoder.h
src/gamepad_pkg/: package.xml
src/gamepad_pkg/gamepad_pkg/: gamepad_testing.py
src/pyserial/: package.xml  setup.cfg  setup.py
src/pyserial/pyserial/: bobserial.py  coba.py  coba1.py  kinematics.py  main.py  motor_control_node.py  serialcoba.py  serialcoba1.py  yudhis.py
src/simplerobot_bt/: CMakeLists.txt  package.xml
src/simplerobot_bt/src/: bt_mission_node.cpp
