cmake_minimum_required(VERSION 3.8)
project(simplerobot_bt)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(geometry_msgs REQUIRED)
find_package(nav_msgs REQUIRED)
find_package(tf2 REQUIRED)

add_executable(bt_mission_node
  src/bt_mission_node.cpp
)

ament_target_dependencies(bt_mission_node
  rclcpp
  geometry_msgs
  nav_msgs
  tf2
)

install(TARGETS
  bt_mission_node
  DESTINATION lib/${PROJECT_NAME}
)

ament_package()
