<package format="3">
  <name>simplerobot_bt</name>
  <version>0.0.0</version>
  <description>Simple Robot Behavior Tree</description>

  <maintainer email="bobby@todo.todo">bobby</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
